# CCFlow

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/skills/: ccflow-run.md
ccflow/: __init__.py  cli.py  event_formatter.py  orchestrator.py  printer.py  telegram_bot.py  tracker.py  utils.py
ccflow/agent/: __init__.py  codex_orchestrator.py  codex_printer.py  orchestrator.py  printer.py  sandbox.py
ccflow/agent/hooks/: sandbox_guard.py
ccflow/telegram/: __init__.py  event_formatter.py  telegram_bot.py
doc/: security-cwd-sandbox.md  telegram-bot-timeout-bug.md  telegram-bot.md
