[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccflow"
version = "0.1.0"
description = "Claude Code orchestrator — reusable wrapper around `claude -p` CLI"
requires-python = ">=3.11"
dependencies = ["python-telegram-bot>=21.0"]

[project.scripts]
ccflow = "ccflow.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ccflow"]
